fix profile pic on mobile

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -652,7 +652,7 @@ a:link, a:visited, a:hover, a:active {
         position: relative;
         background-size: contain;
         background-position: center;
-        background-image: url("/images/profile/square-pic-50.webp");
+        background-image: url("/public/images/profile/square-pic-50.webp");
         border-radius: 0%;
         box-shadow: none;
     }
